# netra

./: .gitignore  CITATION.cff  Enhancing Cyber Threat Classification.docm  LICENSE  README.md  cybercrime_classifier.py  main.py  pyproject.toml  report.md  test.py  train.py  training_metrics_20241030_165916.txt  training_metrics_20241101_162912.txt
docs/: report.md
src/: cleaning_and_smote.ipynb  cybercrime_classifier.py  data-cleaning.ipynb  data-visualization.ipynb  main.py  multi-vote.ipynb  notebook.ipynb  plot.py  plot2.py  random-forest.ipynb  random_forest.ipynb  smote-random-forest.ipynb  smote.ipynb  svm.ipynb  test.py  train.py
