[project]
name = "netra"
version = "0.1.0"
description = "An AI-Powered Cybercrime Reporting and Analysis System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
